sdk/cdn/arm-cdn/samples/v7/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| --------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [DoNotNormalizeAfdCustomDomainsCreateSample.js][donotnormalizeafdcustomdomainscreatesample]                                 | Creates a new domain within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [DoNotNormalizeAfdCustomDomainsDeleteSample.js][donotnormalizeafdcustomdomainsdeletesample]                                 | Deletes an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Delete.json                                                                                                                                                                                                                                                       |
| [DoNotNormalizeAfdCustomDomainsGetSample.js][donotnormalizeafdcustomdomainsgetsample]                                       | Gets an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Get.json                                                                                                                                                                                                                                                             |
| [DoNotNormalizeAfdCustomDomainsListByProfileSample.js][donotnormalizeafdcustomdomainslistbyprofilesample]                   | Lists existing AzureFrontDoor domains. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                |
| [DoNotNormalizeAfdCustomDomainsRefreshValidationTokenSample.js][donotnormalizeafdcustomdomainsrefreshvalidationtokensample] | Updates the domain validation token. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_RefreshValidationToken.json                                                                                                                                                                                                                                                                                                                                         |
| [DoNotNormalizeAfdCustomDomainsUpdateSample.js][donotnormalizeafdcustomdomainsupdatesample]                                 | Updates an existing domain within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [DoNotNormalizeAfdEndpointsCreateSample.js][donotnormalizeafdendpointscreatesample]                                         | Creates a new AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Create.json                                                                                                                                                                                                                                                             |
| [DoNotNormalizeAfdEndpointsDeleteSample.js][donotnormalizeafdendpointsdeletesample]                                         | Deletes an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Delete.json                                                                                                                                                                                                                                                       |
| [DoNotNormalizeAfdEndpointsGetSample.js][donotnormalizeafdendpointsgetsample]                                               | Gets an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Get.json                                                                                                                                                                                                                                                             |
| [DoNotNormalizeAfdEndpointsListByProfileSample.js][donotnormalizeafdendpointslistbyprofilesample]                           | Lists existing AzureFrontDoor endpoints. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                  |
| [DoNotNormalizeAfdEndpointsListResourceUsageSample.js][donotnormalizeafdendpointslistresourceusagesample]                   | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                                           |
| [DoNotNormalizeAfdEndpointsPurgeContentSample.js][donotnormalizeafdendpointspurgecontentsample]                             | Removes a content from AzureFrontDoor. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                     |
| [DoNotNormalizeAfdEndpointsUpdateSample.js][donotnormalizeafdendpointsupdatesample]                                         | Updates an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update domains, use the Update Custom Domain operation. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Update.json                   |
| [DoNotNormalizeAfdEndpointsValidateCustomDomainSample.js][donotnormalizeafdendpointsvalidatecustomdomainsample]             | Validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                                          |
| [DoNotNormalizeAfdOriginGroupsCreateSample.js][donotnormalizeafdorigingroupscreatesample]                                   | Creates a new origin group within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                      |
| [DoNotNormalizeAfdOriginGroupsDeleteSample.js][donotnormalizeafdorigingroupsdeletesample]                                   | Deletes an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                            |
| [DoNotNormalizeAfdOriginGroupsGetSample.js][donotnormalizeafdorigingroupsgetsample]                                         | Gets an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                  |
| [DoNotNormalizeAfdOriginGroupsListByProfileSample.js][donotnormalizeafdorigingroupslistbyprofilesample]                     | Lists all of the existing origin groups within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_ListByProfile.json                                                                                                                                                                                                                                                                                                                              |
| [DoNotNormalizeAfdOriginGroupsListResourceUsageSample.js][donotnormalizeafdorigingroupslistresourceusagesample]             | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_ListResourceUsage.json                                                                                                                                                                                                                                                                                                        |
| [DoNotNormalizeAfdOriginGroupsUpdateSample.js][donotnormalizeafdorigingroupsupdatesample]                                   | Updates an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                            |
| [DoNotNormalizeAfdOriginsCreateSample.js][donotnormalizeafdoriginscreatesample]                                             | Creates a new origin within the specified origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Create.json                                                                                                                                                                                                                                                                                                                                            |
| [DoNotNormalizeAfdOriginsDeleteSample.js][donotnormalizeafdoriginsdeletesample]                                             | Deletes an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Delete.json                                                                                                                                                                                                                                                                                                                                                 |
| [DoNotNormalizeAfdOriginsGetSample.js][donotnormalizeafdoriginsgetsample]                                                   | Gets an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Get.json                                                                                                                                                                                                                                                                                                                                                       |
| [DoNotNormalizeAfdOriginsListByOriginGroupSample.js][donotnormalizeafdoriginslistbyorigingroupsample]                       | Lists all of the existing origins within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_ListByOriginGroup.json                                                                                                                                                                                                                                                                                                                               |
| [DoNotNormalizeAfdOriginsUpdateSample.js][donotnormalizeafdoriginsupdatesample]                                             | Updates an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [DoNotNormalizeAfdProfilesCheckHostNameAvailabilitySample.js][donotnormalizeafdprofilescheckhostnameavailabilitysample]     | Validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDProfiles_CheckHostNameAvailability.json                                                                                                                                                                                                                                                                                      |
| [DoNotNormalizeAfdProfilesListResourceUsageSample.js][donotnormalizeafdprofileslistresourceusagesample]                     | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDProfiles_ListResourceUsage.json                                                                                                                                                                                                                                                                                                            |
| [checkEndpointNameAvailabilitySample.js][checkendpointnameavailabilitysample]                                               | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a afdx endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                        |
| [checkNameAvailabilitySample.js][checknameavailabilitysample]                                                               | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CheckNameAvailability.json                                                                                                                                                                                                                                                                 |
| [checkNameAvailabilityWithSubscriptionSample.js][checknameavailabilitywithsubscriptionsample]                               | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                 |
| [customDomainsCreateSample.js][customdomainscreatesample]                                                                   | Creates a new custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsDeleteSample.js][customdomainsdeletesample]                                                                   | Deletes an existing custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_Delete.json                                                                                                                                                                                                                                                                                                                                           |
| [customDomainsDisableCustomHttpsSample.js][customdomainsdisablecustomhttpssample]                                           | Disable https delivery of the custom domain. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_DisableCustomHttps.json                                                                                                                                                                                                                                                                                                                                        |
| [customDomainsEnableCustomHttpsSample.js][customdomainsenablecustomhttpssample]                                             | Enable https delivery of the custom domain. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_EnableCustomHttpsUsingCDNManagedCertificate.json                                                                                                                                                                                                                                                                                                                |
| [customDomainsGetSample.js][customdomainsgetsample]                                                                         | Gets an existing custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_Get.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsListByEndpointSample.js][customdomainslistbyendpointsample]                                                   | Lists all of the existing custom domains within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                            |
| [edgeNodesListSample.js][edgenodeslistsample]                                                                               | Edgenodes are the global Point of Presence (POP) locations used to deliver CDN content to end users. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/EdgeNodes_List.json                                                                                                                                                                                                                                                                                                  |
| [endpointsCreateSample.js][endpointscreatesample]                                                                           | Creates a new CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Create.json                                                                                                                                                                                                                                                                           |
| [endpointsDeleteSample.js][endpointsdeletesample]                                                                           | Deletes an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Delete.json                                                                                                                                                                                                                                                                     |
| [endpointsGetSample.js][endpointsgetsample]                                                                                 | Gets an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Get.json                                                                                                                                                                                                                                                                           |
| [endpointsListByProfileSample.js][endpointslistbyprofilesample]                                                             | Lists existing CDN endpoints. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                                |
| [endpointsListResourceUsageSample.js][endpointslistresourceusagesample]                                                     | Checks the quota and usage of geo filters and custom domains under the given endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                                   |
| [endpointsLoadContentSample.js][endpointsloadcontentsample]                                                                 | Pre-loads a content to CDN. Available for Verizon Profiles. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_LoadContent.json                                                                                                                                                                                                                                                                                                                                    |
| [endpointsPurgeContentSample.js][endpointspurgecontentsample]                                                               | Removes a content from CDN. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                                   |
| [endpointsStartSample.js][endpointsstartsample]                                                                             | Starts an existing CDN endpoint that is on a stopped state. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [endpointsStopSample.js][endpointsstopsample]                                                                               | Stops an existing running CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Stop.json                                                                                                                                                                                                                                                                                                                                                               |
| [endpointsUpdateSample.js][endpointsupdatesample]                                                                           | Updates an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update custom domains, use the Update Custom Domain operation. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Update.json                          |
| [endpointsValidateCustomDomainSample.js][endpointsvalidatecustomdomainsample]                                               | Validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                                             |
| [logAnalyticsGetLogAnalyticsLocationsSample.js][loganalyticsgetloganalyticslocationssample]                                 | Get all available location names for AFD log analytics report. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsLocations.json                                                                                                                                                                                                                                                                                                                 |
| [logAnalyticsGetLogAnalyticsMetricsSample.js][loganalyticsgetloganalyticsmetricssample]                                     | Get log report for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                                                   |
| [logAnalyticsGetLogAnalyticsRankingsSample.js][loganalyticsgetloganalyticsrankingssample]                                   | Get log analytics ranking report for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                |
| [logAnalyticsGetLogAnalyticsResourcesSample.js][loganalyticsgetloganalyticsresourcessample]                                 | Get all endpoints and custom domains available for AFD log report x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsResources.json                                                                                                                                                                                                                                                                                                              |
| [logAnalyticsGetWafLogAnalyticsMetricsSample.js][loganalyticsgetwafloganalyticsmetricssample]                               | Get Waf related log analytics report for AFD profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetWafLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                         |
| [logAnalyticsGetWafLogAnalyticsRankingsSample.js][loganalyticsgetwafloganalyticsrankingssample]                             | Get WAF log analytics charts for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetWafLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                 |
| [managedRuleSetsListSample.js][managedrulesetslistsample]                                                                   | Lists all available managed rule sets. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafListManagedRuleSets.json                                                                                                                                                                                                                                                                                                                                                        |
| [operationsListSample.js][operationslistsample]                                                                             | Lists all of the available CDN REST API operations. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                                                                  |
| [originGroupsCreateSample.js][origingroupscreatesample]                                                                     | Creates a new origin group within the specified endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                        |
| [originGroupsDeleteSample.js][origingroupsdeletesample]                                                                     | Deletes an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                             |
| [originGroupsGetSample.js][origingroupsgetsample]                                                                           | Gets an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [originGroupsListByEndpointSample.js][origingroupslistbyendpointsample]                                                     | Lists all of the existing origin groups within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                              |
| [originGroupsUpdateSample.js][origingroupsupdatesample]                                                                     | Updates an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                             |
| [originsCreateSample.js][originscreatesample]                                                                               | Creates a new origin within the specified endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Create.json                                                                                                                                                                                                                                                                                                                                                   |
| [originsDeleteSample.js][originsdeletesample]                                                                               | Deletes an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [originsGetSample.js][originsgetsample]                                                                                     | Gets an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Get.json                                                                                                                                                                                                                                                                                                                                                              |
| [originsListByEndpointSample.js][originslistbyendpointsample]                                                               | Lists all of the existing origins within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                         |
| [originsUpdateSample.js][originsupdatesample]                                                                               | Updates an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Update.json                                                                                                                                                                                                                                                                                                                                                        |
| [policiesCreateOrUpdateSample.js][policiescreateorupdatesample]                                                             | Create or update policy with specified rule set name within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPolicyCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                |
| [policiesDeleteSample.js][policiesdeletesample]                                                                             | Deletes Policy x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPolicyDelete.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [policiesGetSample.js][policiesgetsample]                                                                                   | Retrieve protection policy with specified name within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPolicyGet.json                                                                                                                                                                                                                                                                                                                                 |
| [policiesListSample.js][policieslistsample]                                                                                 | Lists all of the protection policies within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafListPolicies.json                                                                                                                                                                                                                                                                                                                                        |
| [policiesUpdateSample.js][policiesupdatesample]                                                                             | Update an existing CdnWebApplicationFirewallPolicy with the specified policy name under the specified subscription and resource group x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPatchPolicy.json                                                                                                                                                                                                                                                                 |
| [profilesCreateSample.js][profilescreatesample]                                                                             | Creates a new Azure Front Door Standard or Azure Front Door Premium or CDN profile with a profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Create.json                                                                                                                                                                                                                                          |
| [profilesDeleteSample.js][profilesdeletesample]                                                                             | Deletes an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified parameters. Deleting a profile will result in the deletion of all of the sub-resources including endpoints, origins and custom domains. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Delete.json                                                                                                                                                  |
| [profilesGenerateSsoUriSample.js][profilesgeneratessourisample]                                                             | Generates a dynamic SSO URI used to sign in to the CDN supplemental portal. Supplemental portal is used to configure advanced feature capabilities that are not yet available in the Azure portal, such as core reports in a standard profile; rules engine, advanced HTTP reports, and real-time stats and alerts in a premium profile. The SSO URI changes approximately every 10 minutes. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_GenerateSsoUri.json |
| [profilesGetSample.js][profilesgetsample]                                                                                   | Gets an Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Get.json                                                                                                                                                                                                                                       |
| [profilesListByResourceGroupSample.js][profileslistbyresourcegroupsample]                                                   | Lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_ListByResourceGroup.json                                                                                                                                                                                                                                                                         |
| [profilesListResourceUsageSample.js][profileslistresourceusagesample]                                                       | Checks the quota and actual usage of endpoints under the given Azure Front Door Standard or Azure Front Door Premium or CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_ListResourceUsage.json                                                                                                                                                                                                                                                      |
| [profilesListSample.js][profileslistsample]                                                                                 | Lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within an Azure subscription. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_List.json                                                                                                                                                                                                                                                                                   |
| [profilesListSupportedOptimizationTypesSample.js][profileslistsupportedoptimizationtypessample]                             | Gets the supported optimization types for the current profile. A user can create an endpoint with an optimization type from the listed values. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_ListSupportedOptimizationTypes.json                                                                                                                                                                                                                               |
| [profilesUpdateSample.js][profilesupdatesample]                                                                             | Updates an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Update.json                                                                                                                                                                                                                        |
| [resourceUsageListSample.js][resourceusagelistsample]                                                                       | Check the quota and actual usage of the CDN profiles under the given subscription. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/ResourceUsage_List.json                                                                                                                                                                                                                                                                                                                |
| [routesCreateSample.js][routescreatesample]                                                                                 | Creates a new route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Create.json                                                                                                                                                                                                                                                              |
| [routesDeleteSample.js][routesdeletesample]                                                                                 | Deletes an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Delete.json                                                                                                                                                                                                                                                        |
| [routesGetSample.js][routesgetsample]                                                                                       | Gets an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Get.json                                                                                                                                                                                                                                                              |
| [routesListByEndpointSample.js][routeslistbyendpointsample]                                                                 | Lists all of the existing origins within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                            |
| [routesUpdateSample.js][routesupdatesample]                                                                                 | Updates an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Update.json                                                                                                                                                                                                                                                        |
| [ruleSetsCreateSample.js][rulesetscreatesample]                                                                             | Creates a new rule set within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [ruleSetsDeleteSample.js][rulesetsdeletesample]                                                                             | Deletes an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_Delete.json                                                                                                                                                                                                                                                           |
| [ruleSetsGetSample.js][rulesetsgetsample]                                                                                   | Gets an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_Get.json                                                                                                                                                                                                                                                                 |
| [ruleSetsListByProfileSample.js][rulesetslistbyprofilesample]                                                               | Lists existing AzureFrontDoor rule sets within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [ruleSetsListResourceUsageSample.js][rulesetslistresourceusagesample]                                                       | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_ListResourceUsage.json                                                                                                                                                                                                                                                                                                               |
| [rulesCreateSample.js][rulescreatesample]                                                                                   | Creates a new delivery rule within the specified rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Create.json                                                                                                                                                                                                                                                                                                                                              |
| [rulesDeleteSample.js][rulesdeletesample]                                                                                   | Deletes an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [rulesGetSample.js][rulesgetsample]                                                                                         | Gets an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [rulesListByRuleSetSample.js][ruleslistbyrulesetsample]                                                                     | Lists all of the existing delivery rules within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_ListByRuleSet.json                                                                                                                                                                                                                                                                                                                                      |
| [rulesUpdateSample.js][rulesupdatesample]                                                                                   | Updates an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Update.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsCreateSample.js][secretscreatesample]                                                                               | Creates a new Secret within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_Create.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsDeleteSample.js][secretsdeletesample]                                                                               | Deletes an existing Secret within profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [secretsGetSample.js][secretsgetsample]                                                                                     | Gets an existing Secret within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_Get.json                                                                                                                                                                                                                                                                                                                                                                |
| [secretsListByProfileSample.js][secretslistbyprofilesample]                                                                 | Lists existing AzureFrontDoor secrets. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                         |
| [securityPoliciesCreateSample.js][securitypoliciescreatesample]                                                             | Creates a new security policy within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Create.json                                                                                                                                                                                                                                                                                                                                  |
| [securityPoliciesDeleteSample.js][securitypoliciesdeletesample]                                                             | Deletes an existing security policy within profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                          |
| [securityPoliciesGetSample.js][securitypoliciesgetsample]                                                                   | Gets an existing security policy within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [securityPoliciesListByProfileSample.js][securitypolicieslistbyprofilesample]                                               | Lists security policies associated with the profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_ListByProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [securityPoliciesPatchSample.js][securitypoliciespatchsample]                                                               | Updates an existing security policy within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Patch.json                                                                                                                                                                                                                                                                                                                                         |
| [validateProbeSample.js][validateprobesample]                                                                               | Check if the probe path is a valid path and the file can be accessed. Probe path is the path to a file hosted on the origin server to help accelerate the delivery of dynamic content via the CDN endpoint. This path is relative to the origin path specified in the endpoint configuration. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/ValidateProbe.json                                                                                                          |
| [validateSecretSample.js][validatesecretsample]                                                                             | Validate a Secret in the profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Validate_Secret.json                                                                                                                                                                                                                                                                                                                                                                    |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node DoNotNormalizeAfdCustomDomainsCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node DoNotNormalizeAfdCustomDomainsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[donotnormalizeafdcustomdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdCustomDomainsCreateSample.js
[donotnormalizeafdcustomdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdCustomDomainsDeleteSample.js
[donotnormalizeafdcustomdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdCustomDomainsGetSample.js
[donotnormalizeafdcustomdomainslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdCustomDomainsListByProfileSample.js
[donotnormalizeafdcustomdomainsrefreshvalidationtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdCustomDomainsRefreshValidationTokenSample.js
[donotnormalizeafdcustomdomainsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdCustomDomainsUpdateSample.js
[donotnormalizeafdendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsCreateSample.js
[donotnormalizeafdendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsDeleteSample.js
[donotnormalizeafdendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsGetSample.js
[donotnormalizeafdendpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsListByProfileSample.js
[donotnormalizeafdendpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsListResourceUsageSample.js
[donotnormalizeafdendpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsPurgeContentSample.js
[donotnormalizeafdendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsUpdateSample.js
[donotnormalizeafdendpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdEndpointsValidateCustomDomainSample.js
[donotnormalizeafdorigingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginGroupsCreateSample.js
[donotnormalizeafdorigingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginGroupsDeleteSample.js
[donotnormalizeafdorigingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginGroupsGetSample.js
[donotnormalizeafdorigingroupslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginGroupsListByProfileSample.js
[donotnormalizeafdorigingroupslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginGroupsListResourceUsageSample.js
[donotnormalizeafdorigingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginGroupsUpdateSample.js
[donotnormalizeafdoriginscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginsCreateSample.js
[donotnormalizeafdoriginsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginsDeleteSample.js
[donotnormalizeafdoriginsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginsGetSample.js
[donotnormalizeafdoriginslistbyorigingroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginsListByOriginGroupSample.js
[donotnormalizeafdoriginsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdOriginsUpdateSample.js
[donotnormalizeafdprofilescheckhostnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdProfilesCheckHostNameAvailabilitySample.js
[donotnormalizeafdprofileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/DoNotNormalizeAfdProfilesListResourceUsageSample.js
[checkendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/checkEndpointNameAvailabilitySample.js
[checknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/checkNameAvailabilitySample.js
[checknameavailabilitywithsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/checkNameAvailabilityWithSubscriptionSample.js
[customdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/customDomainsCreateSample.js
[customdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/customDomainsDeleteSample.js
[customdomainsdisablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/customDomainsDisableCustomHttpsSample.js
[customdomainsenablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/customDomainsEnableCustomHttpsSample.js
[customdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/customDomainsGetSample.js
[customdomainslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/customDomainsListByEndpointSample.js
[edgenodeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/edgeNodesListSample.js
[endpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsCreateSample.js
[endpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsDeleteSample.js
[endpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsGetSample.js
[endpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsListByProfileSample.js
[endpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsListResourceUsageSample.js
[endpointsloadcontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsLoadContentSample.js
[endpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsPurgeContentSample.js
[endpointsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsStartSample.js
[endpointsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsStopSample.js
[endpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsUpdateSample.js
[endpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/endpointsValidateCustomDomainSample.js
[loganalyticsgetloganalyticslocationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/logAnalyticsGetLogAnalyticsLocationsSample.js
[loganalyticsgetloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/logAnalyticsGetLogAnalyticsMetricsSample.js
[loganalyticsgetloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/logAnalyticsGetLogAnalyticsRankingsSample.js
[loganalyticsgetloganalyticsresourcessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/logAnalyticsGetLogAnalyticsResourcesSample.js
[loganalyticsgetwafloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/logAnalyticsGetWafLogAnalyticsMetricsSample.js
[loganalyticsgetwafloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/logAnalyticsGetWafLogAnalyticsRankingsSample.js
[managedrulesetslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/managedRuleSetsListSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/operationsListSample.js
[origingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originGroupsCreateSample.js
[origingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originGroupsDeleteSample.js
[origingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originGroupsGetSample.js
[origingroupslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originGroupsListByEndpointSample.js
[origingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originGroupsUpdateSample.js
[originscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originsCreateSample.js
[originsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originsDeleteSample.js
[originsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originsGetSample.js
[originslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originsListByEndpointSample.js
[originsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/originsUpdateSample.js
[policiescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/policiesCreateOrUpdateSample.js
[policiesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/policiesDeleteSample.js
[policiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/policiesGetSample.js
[policieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/policiesListSample.js
[policiesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/policiesUpdateSample.js
[profilescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesCreateSample.js
[profilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesDeleteSample.js
[profilesgeneratessourisample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesGenerateSsoUriSample.js
[profilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesGetSample.js
[profileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesListByResourceGroupSample.js
[profileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesListResourceUsageSample.js
[profileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesListSample.js
[profileslistsupportedoptimizationtypessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesListSupportedOptimizationTypesSample.js
[profilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/profilesUpdateSample.js
[resourceusagelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/resourceUsageListSample.js
[routescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/routesCreateSample.js
[routesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/routesDeleteSample.js
[routesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/routesGetSample.js
[routeslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/routesListByEndpointSample.js
[routesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/routesUpdateSample.js
[rulesetscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/ruleSetsCreateSample.js
[rulesetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/ruleSetsDeleteSample.js
[rulesetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/ruleSetsGetSample.js
[rulesetslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/ruleSetsListByProfileSample.js
[rulesetslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/ruleSetsListResourceUsageSample.js
[rulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/rulesCreateSample.js
[rulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/rulesDeleteSample.js
[rulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/rulesGetSample.js
[ruleslistbyrulesetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/rulesListByRuleSetSample.js
[rulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/rulesUpdateSample.js
[secretscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/secretsCreateSample.js
[secretsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/secretsDeleteSample.js
[secretsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/secretsGetSample.js
[secretslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/secretsListByProfileSample.js
[securitypoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/securityPoliciesCreateSample.js
[securitypoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/securityPoliciesDeleteSample.js
[securitypoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/securityPoliciesGetSample.js
[securitypolicieslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/securityPoliciesListByProfileSample.js
[securitypoliciespatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/securityPoliciesPatchSample.js
[validateprobesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/validateProbeSample.js
[validatesecretsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/javascript/validateSecretSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-cdn?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/cdn/arm-cdn/README.md
